k8s/manifests/shared/istio/network-policies/default-deny-all.yaml
# Default deny all ingress and egress in engine-simulator
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: istio-gateway
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
